--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "RecipeKeeper",
   "version": "1.0.0",
   "description": "React Recipe Keeper",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
     "seed": "node scripts/seed.js"
   },
   "repository": {
@@ -20,9 +23,15 @@
   },
   "homepage": "https://github.com/JackieHodges/RecipeKeeper#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.12"
   }
 }
