--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/JackieHodges/RecipeKeeper#readme",
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
