--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
+    "react-loading": "^2.0.3",
     "sequelize": "^6.6.4"
   },
   "devDependencies": {
